added spec test

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
   />
+  <meta name="description" content="Horus, solo lo mejor. Pagina de prueba.">
   <!-- formMessage -->
   <script type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
